fix(login-register): resolve issues of scroll and overflow

--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -10,6 +10,7 @@
   overflow: hidden;
   height: 100vh;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #12141d 100%);
+  overflow-y: auto !important;
 }
 .validationMsg {
   font-size: x-small;
